--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "modern-normalize": "^2.0.0",
-    "mongoose": "^8.0.2"
+    "mongoose": "^8.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
