--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "#validators/*": "./src/validators/*"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
