--- a/package.json
+++ b/package.json
@@ -28,16 +28,12 @@
     "cors": "^2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "jimp": "^0.22.10",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "modern-normalize": "^2.0.0",
     "mongoose": "^8.0.2",
     "morgan": "1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "nanoid": "^5.0.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "swagger-jsdoc": "^6.2.8",
@@ -50,6 +46,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   }
 }
