--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "morgan": "1.10.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
